2007-08-08 [wwp]	2.10.0cvs103

	* src/prefs_folder_item.c
		Fix compilation w/ USE_ASPELL set (broken
		by 2.10.0cvs102).

2007-08-08 [ticho]	2.10.0cvs102

	* src/prefs_folder_item.c
		Migrate two deprecated GtkOptionMenu widgets to GtkComboBox.

2007-08-08 [colin]	2.10.0cvs101

	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Close selected mailbox before doing
		status on it.

2007-08-08 [colin]	2.10.0cvs100

	* src/html.c
		Complete symbol table, thanks to wwp.
		Fixes bug 1284, 'The html -> text 
		converter ignores entities'
	* src/msgcache.c
		Fix possible fd leak

2007-08-08 [colin]	2.10.0cvs99

	* src/imap.c
		Better way to fetch UIDs on non-UIDPLUS servers

2007-08-07 [colin]	2.10.0cvs98

	* src/imap.c
		fix bug 1275, 'auto-saved draft messages not 
		always being removed'; Also, make multiple
		copy (in the same account) faster by matching
		source/destination message UIDs.
	* src/messageview.c
		Don't try to reshow deleted mail
	* src/msgcache.c
		Fix leak on error path

2007-08-07 [wwp]	2.10.0cvs97

	* manual/account.xml
	* manual/advanced.xml
	* manual/fr/account.xml
	* manual/fr/advanced.xml
		Updated the reference manual and the French translation to
		reflect 2.10.0cvs84: enable running folder Processing
		rules on demand.

2007-08-06 [wwp]	2.10.0cvs96

	* src/prefs_common.c
	* src/prefs_common.h
	* src/textview.c
		Allow changing the emphasis color used to highlight
		the newsreader/x-mailer header value when it matches
		our preferred mail agent (hidden pref 'emphasis_col' added
		to clawsrc).

2007-08-06 [colin]	2.10.0cvs95

	* src/compose.c
	* src/compose.h
		Re-commit 2.10.0cvs86, with a protection
		against Pango bug. Also, try to fix 
		bug 1275, 'auto-saved draft messages not 
		always being removed'

2007-08-06 [wwp]	2.10.0cvs94

	* src/gtk/quicksearch.c
		Replace deprecated GtkCombo with its modern equivalen GtkComboBox.

2007-08-06 [ticho]	2.10.0cvs93

	* src/prefs_account.c
	* src/gtk/combobox.c